bookcatalogservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: bookcatalogservice-deployment
  namespace: book-microservices
  labels:
    app: bookcatalogservice

spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookcatalogservice
  template:
    metadata:
      labels:
        app: bookcatalogservice
    spec:
      containers:
      - name: bookcatalogservice
        image: docker.io/library/bookcatalogservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  namespace: book-microservices
  name: bookcatalogservice
spec:
  selector:
    app: bookcatalogservice
  ports:
    - name: tcp 
      protocol: TCP
      port: 80
      targetPort: 80
    - name: grpc
      protocol: UDP
      port: 8181
      targetPort: 8181
