identityservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: identityservice-deployment
  namespace: book-microservices
  labels:
    app: identityservice

spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityservice
  template:
    metadata:
      labels:
        app: identityservice
    spec:
      containers:
      - name: identityservice
        image: docker.io/library/identityservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  namespace: book-microservices
  name: identityservice
spec:
  selector:
    app: identityservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
