jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  namespace: book-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.40
        imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
  namespace: book-microservices
spec:
  selector:
    app: jaeger
  ports:
  - name: udp1
    protocol: UDP
    port: 5775
    targetPort: 5775
  - name: udp2
    protocol: UDP
    port: 6831
    targetPort: 6831
  - name: udp3
    protocol: UDP
    port: 6832
    targetPort: 6832
  - name: tcp1
    protocol: TCP
    port: 5778
    targetPort: 5778
  - name: tcp2
    protocol: TCP
    port: 9411
    targetPort: 9411
  - name: tcp3
    protocol: TCP
    port: 14250
    targetPort: 14250
  - name: tcp4
    protocol: TCP
    port: 14268
    targetPort: 14268
  - name: tcp5
    protocol: TCP
    port: 14269
    targetPort: 14269
  - name: tcp6
    protocol: TCP
    port: 16686
    targetPort: 16686
  - name: tcp7
    protocol: TCP
    port: 4317
    targetPort: 4317
  - name: tcp8
    protocol: TCP
    port: 4318
    targetPort: 4318

  type: LoadBalancer
