postgres.yaml
﻿apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgres-deployment
  namespace: book-microservices
  labels:
    app: postgres

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  namespace: book-microservices
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
