reviewservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: reviewservice-deployment
  namespace: book-microservices
  labels:
    app: reviewservice

spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewservice
  template:
    metadata:
      labels:
        app: reviewservice
    spec:
      containers:
      - name: reviewservice
        image: docker.io/library/reviewservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  namespace: book-microservices
  name: reviewservice
spec:
  selector:
    app: reviewservice
  ports:
    - name: tcp 
      protocol: TCP
      port: 80
      targetPort: 80
